[package]
name = "git-lfs-cheap-checkout"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = "4.5.28"
sha2 = "0.10"
tokio = { version = "1.43.0", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Ioctl"] }

[dev-dependencies]
tempfile = "3"
